--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 body {
-    /* font-family: 'Cairo', sans-serif; */
+    font-family: 'Cairo', sans-serif;
     line-height: 1.6;
     color: #060606;
     direction: rtl;
